--- a/package.json
+++ b/package.json
@@ -9,16 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.2",
+    "graphql": "^15.8.0",
+    "graphql-scalars": "^1.22.4",
+    "knex": "^3.0.1",
+    "next": "14.0.3",
+    "next-auth": "^4.24.5",
+    "objection": "^3.1.2",
+    "pg": "^8.11.3",
+    "prisma": "^5.6.0",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5.2.2"
   }
 }
